test_suite/alan-2022-examples/failing/005980_mutation.alan
source l begin leave 8 = . end
